# data-parser

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/: main.py
tests/: conftest.py
tests/integration/: test_database.py  test_html_conversion.py  test_integration.py
